--- a/public/inspectstyles.css
+++ b/public/inspectstyles.css
@@ -12,6 +12,7 @@ header {
   padding: 20px;
   text-align: center;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  height: 140px;
 }
 
 main {
@@ -268,4 +269,15 @@ h2 {
   border-radius: 10px;
   padding: 0px 6px 6px 6px;
   color: white;
+}
+
+img {
+  position: absolute;
+  left: 50px;
+  top: 50px;
+  width: 80px;
+}
+
+#process-name {
+  margin-top: 40px;
 }
